Fix styling error on flights search form.

--- a/app/assets/stylesheets/partials/_form.scss
+++ b/app/assets/stylesheets/partials/_form.scss
@@ -12,6 +12,7 @@ form {
     width: 200px;
     border: 1px solid #542e4d;
     border-radius: .25em;
+    margin-bottom: 5%
 
   }
 
@@ -19,7 +20,7 @@ form {
     width: 200px;
     border: 1px solid #542e4d;
     border-radius: .25em;
-    margin-bottom: 15px;
+    margin-bottom: 5%;
   }
 
   button {
