--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,5 +8,6 @@
     <%= link_to "register", new_user_path %>
     <%= link_to "login", new_session_path %>
   <% end %>
+  <%= link_to "find flights", search_flights_path %>
   </div>
 </header>
