--- a/app/assets/stylesheets/partials/_form.scss
+++ b/app/assets/stylesheets/partials/_form.scss
@@ -1,7 +1,7 @@
 form {
   text-align: center;
-  padding-top: 0px;
-  margin-top: 0px;
+  padding: 0px;
+  margin: 0px;
 
   label {
     display: block;
@@ -12,15 +12,13 @@ form {
     width: 200px;
     border: 1px solid #542e4d;
     border-radius: .25em;
-    margin-bottom: 5%
-
   }
 
   select {
     width: 200px;
     border: 1px solid #542e4d;
     border-radius: .25em;
-    margin-bottom: 5%;
+    margin-bottom: 10px;
   }
 
   button {
@@ -35,4 +33,5 @@ form {
     color: #4a868c;
     border: 1px solid #4a868c;
   }
+
 }
