--- a/app/assets/stylesheets/structure/main.scss
+++ b/app/assets/stylesheets/structure/main.scss
@@ -19,7 +19,9 @@ main {
 }
 
 header {
- background-color: rgba(200, 200, 200, .8);
+ color: rgba(200, 200, 200, .8);
+ background-color: #542e4d;
+ width: 100%;
 }
 
 footer {
