--- a/app/assets/stylesheets/structure/main.scss
+++ b/app/assets/stylesheets/structure/main.scss
@@ -19,7 +19,23 @@ main {
 }
 
 header {
- background-color: rgba(200, 200, 200, .8);
+  text-align: center;
+  top: 0;
+  left: 0;
+  height: 120px;
+  width: 100%;
+  background-color: #542e4d;
+  color: rgba(200, 200, 200, .8);
+  position: fixed;
+  z-index: 2;
+
+  a:link {
+    color: rgba(200, 200, 200, .8)
+  }
+
+  a:visited {
+    color: rgba(200, 200, 200, .8)
+  }
 }
 
 footer {
@@ -48,7 +64,7 @@ footer {
 }
 
 .centered {
-  padding-top: 6em;
+  padding-top: 15em;
   margin: 0 auto;
   width: 35em;
 }
