Finish all form styling and error messages.

--- a/app/assets/stylesheets/partials/_box.scss
+++ b/app/assets/stylesheets/partials/_box.scss
@@ -1,4 +1,4 @@
-#homepage-box, #search, #search-results-box, #business-form {
+#homepage-box, #search, #search-results-box, #business-form, #register, #login {
   text-align: center;
 
   hr {
