--- a/app/assets/stylesheets/partials/_form.scss
+++ b/app/assets/stylesheets/partials/_form.scss
@@ -8,7 +8,7 @@ form {
     padding-bottom: 5px;
   }
 
-  input[type=text] {
+  input[type=text], [type=password] {
     width: 200px;
     border: 1px solid #542e4d;
     border-radius: .25em;
