--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,31 @@
-<div class="row box">
-<% if @user.errors.any? %>
-  <ul>
-  <% @user.errors.each do |key, message| %>
-  <li><%= "#{key} " + "#{message}" %></li>
-  <% end %>
-  </ul>
-<% end %>
-<h2>New user</h2>
-<%= form_for @user do |f| %>
+<div class='section container' id='register-section'>
+  <div class='centered'>
+    <div class="" id='register'>
+      <div class="box">
+        <h2>New user</h2>
+        <hr>
+        <%= form_for @user do |f| %>
+        <div class='form-field'>
+          <%= f.label "Username:" %>
+          <%= f.text_field :username %>
+          <p class='errors'><%= show_errors(@user, :username) %></p>
+        </div>
 
-<%= f.label "Username:" %>
-<%= f.text_field :username %>
+        <div class='form-field'>
+          <%= f.label "Password:" %>
+          <%= f.password_field :password %>
+          <p class='errors'><%= show_errors(@user, :password) %></p>
+        </div>
 
-<%= f.label "Password:" %>
-<%= f.password_field :password %>
+        <div class='form-field'>
+          <%= f.label "Confirm Password:" %>
+          <%= f.password_field :password_confirmation %>
+          <p class='errors'><%= show_errors(@user, :password_confirmation) %></p>
+        </div>
 
-<%= f.label "Confirm Password:" %>
-<%= f.password_field :password_confirmation %>
-
-<%= content_tag(:button, "Register") %>
-<% end %>
+        <%= content_tag(:button, "Register") %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
