Add flight search link and nav styles to header.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <%= link_to "register", new_user_path %>
         <%= link_to "login", new_session_path %>
       <% end %>
+      <%= link_to "flight search", search_flights_path %>
       </div>
     </header>
 
