--- a/app/assets/stylesheets/structure/main.scss
+++ b/app/assets/stylesheets/structure/main.scss
@@ -66,12 +66,12 @@ footer {
 .centered {
   padding-top: 15em;
   margin: 0 auto;
-  width: 35em;
+  max-width: 35em;
 }
 
 @media (min-width: 75em) {
     .centered.large {
-        width: 65em; /* 720px */
+        max-width: 65em; /* 720px */
     }
 }
 
