Chenged whiskey to distillery in js and sass files. Renamed the image. Add photo credits to the footer

--- a/app/assets/stylesheets/structure/backgrounds.sass
+++ b/app/assets/stylesheets/structure/backgrounds.sass
@@ -1,4 +1,4 @@
-$list: beer wine coffee wine1 whiskey beer1 wine2
+$list: beer wine coffee wine1 distillery beer1 wine2
 
 
 @each $background in $list
