--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
 
     <footer class="row">
       <p>Copyright © <%= Date.today.year %> DBC Huskies &nbsp;|&nbsp; All Rights Reserved</p>
+      <p id='photo-credits'>Photo credits: <a href="http://www.flickr.com/photos/7855946@N08/21751431419">Beer Flight</a>, <a href="http://www.flickr.com/photos/50769931@N00/3386884411">101_1685</a>, <a href="http://www.flickr.com/photos/11962592@N00/29011164395">Wine glasses at Robert Mondavi cellars</a>, <a href="http://www.flickr.com/photos/10687935@N04/10466566746">Take flight!</a>, <a href="http://www.flickr.com/photos/121058175@N06/27814822843">Drinks</a>, <a href="http://www.flickr.com/photos/7291707@N03/8518124134">Yamazaki Distillery</a>, <a href="http://www.flickr.com/photos/28400420@N08/6523881095">Holiday Blend Cupping</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">(license)</a></p>
     </footer>
   </body>
 </html>
