--- a/app/assets/stylesheets/structure/main.scss
+++ b/app/assets/stylesheets/structure/main.scss
@@ -33,11 +33,24 @@ footer {
   text-align: center;
   bottom: 0;
   left: 0;
-  height: 60px;
+  height: 80px;
   width: 100%;
   background-color: #542e4d;
   color: rgba(200, 200, 200, .8);
   position: fixed;
+
+    #photo-credits {
+    font-size: 10px;
+      a:link {
+        color: rgba(200, 200, 200, .8);
+      }
+      a:hover {
+        color: #4a868c;
+      }
+      a:visited {
+        color: rgba(200, 200, 200, .8);
+      }
+    }
 }
 
 .hidden {
@@ -65,4 +78,5 @@ footer {
         width: 65em; /* 720px */
     }
 }
+
 
