Fix login helper thatshows whether a user can rate a business and bookmark a flight

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -18,10 +18,12 @@
       <h3>Rating: <%= @business.average_rating %>
 
       <p>
-      <% if user_already_rated(@business) %>
-        You rated this business <%= @business.ratings.where(:author_id => session[:user_id]).first.value %> out of 5
-      <% else %>
-        <%= link_to "Rate this business", new_business_rating_path(@business) %>
+      <% if user_logged_in? %>
+        <% if user_already_rated(@business) %>
+          You rated this business <%= @business.ratings.where(:author_id => session[:user_id]).first.value %> out of 5
+        <% else %>
+          <%= link_to "Rate this business", new_business_rating_path(@business) %>
+          <% end %>
       <% end %>
       </p>
       <% unless @details == nil %>
