Update profile page layout.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
-<div class="section container" id="business-section">
+<div class="section container" id="profile-section">
   <div class='centered'>
-    <div class="" id='business-form'>
+    <div class="" id='profile'>
       <div class='box'>
         <h2>Welcome, <%= @user.username %></h2>
 
