--- a/app/assets/stylesheets/partials/_box.scss
+++ b/app/assets/stylesheets/partials/_box.scss
@@ -1,4 +1,4 @@
-#homepage-box, #search, #search-results-box, #business-form, #register, #login {
+#homepage-box, #search, #search-results-box, #business-form, #register, #login, #profile {
   text-align: center;
 
   hr {
@@ -23,3 +23,4 @@
   padding:15px;
   margin: 15px;
 }
+
