--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,18 +5,26 @@
         <h2>Welcome, <%= @user.username %></h2>
 
         <h3>Flights you've bookmarked</h3>
-        <ul>
-        <% @user.flights.each do |flight| %>
-          <li><%= link_to flight.name, flight_path(flight) %></li>
+        <% if @user.flights.empty? %>
+          <p>You can bookmark your favorite flights and access them again here.</p>
+        <% else %>
+          <ul>
+          <% @user.flights.each do |flight| %>
+            <li><%= link_to flight.name, flight_path(flight) %></li>
+          <% end %>
+          </ul>
         <% end %>
-        </ul>
 
         <h3>Businesses you've rated</h3>
-        <ul>
-        <% @user.ratings.each do |rating| %>
-        <li><%= link_to "#{rating.business.name}", rating.business %></li>
+        <% if @user.ratings.empty? %>
+           <p>Rate the businesses you have visited.</p>
+        <% else %>
+          <ul>
+          <% @user.ratings.each do |rating| %>
+          <li><%= link_to "#{rating.business.name}", rating.business %></li>
+          <% end %>
+          </ul>
         <% end %>
-        </ul>
 
         <%= link_to "Add a Business to SipTrip", new_business_path %>
 
