Update production environment to resolve Heroku image trouble.

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,6 +1,6 @@
 <div class='section container'>
   <div class='centered'>
-
+<%= @details.inspect %>
     <div class='box'>
       <div class="flash-message">
         <% if flash[:notice] %>
@@ -53,4 +53,3 @@
     </div>
   </div>
 </div>
-
